gascd_frontend/src/styles/styles.scss
/*****
  * Styles (CSS)
  * Global service pages (Get adult social care data)
*****/

/* Expansion on the GOV.UK Design System service navigation component https://design-system.service.gov.uk/components/service-navigation) to include the recommended 'Sign out' button (https://govuk-frontend-review.herokuapp.com/full-page-examples/companies-you-follow-slot) */

/* When the 'Sign out' link is with other items */
.app-sign-out-grouped {
  margin-left: auto;
  padding: 15px 0 10px;
}

.govuk-template--rebranded .app-sign-out-grouped {
  padding: 10px 0;
}

.app-sign-out-grouped .govuk-button {
  margin: 0;
  width: auto;
}

/* When the 'Sign out' link is the only item */
.app-sign-out {
  margin-left: auto;
  padding: 0;
}
@media (min-width: 40.0625em) {
  .app-sign-out {
    padding: 15px 0 10px;
  }
}

.govuk-template--rebranded .app-sign-out {
  padding: 0;
}
@media (min-width: 40.0625em) {
  .govuk-template--rebranded .app-sign-out {
    padding: 10px 0;
  }
}

.app-sign-out .govuk-button {
  margin: 0;
  width: auto;
}

/* Card component taken from the HMRC Design System landing page (https://design.tax.service.gov.uk) */
.app-card {
  background-color: #f8f8f8;
  margin-bottom: 20px;
  padding: 20px;
  text-decoration: none;
}
/* @media (min-width: 48.0625em) {
  .app-card {
    min-height: 145px;
  }
} */

.app-card p:last-child {
  margin-bottom: 0;
}

.app-card,.js-enabled .print-page {
  display: block;
}

.app-card:hover {
  background-color: #005ea5;
  color: #fff;
}
.app-card:hover > * {
  color: inherit;
}

.app-card__heading {
  color: #005ea5;
}

/* Hide the Open Government Licence (OGL) icon, content and link in the footer */
.govuk-footer__inline-list {
  margin-bottom: 0;
}

.govuk-footer__inline-list-item {
  margin-bottom: 0;
}

.govuk-footer__licence-logo {
  display: none;
}

.govuk-footer__licence-description {
  display: none;
}

/* Expansion on the GOV.UK Design System radio component https://design-system.service.gov.uk/components/radio) to stop inline radio buttons labels wrapping */
.govuk-radios--inline {
  text-wrap-mode: nowrap;
}

/* Component used on GOV.UK to distinguish a section needing focus (e.g. feedback) */
.call-to-action {
  margin: 0 0 20px 0;
  background-color: #f3f2f1;
  padding: 30px;
  padding-bottom: 10px;
}
@media print {
  .call-to-action {
    background: none;
    border: 1pt solid #b1b4b6;
    padding: 15px;
    margin: 15px 0;
  }
}

/* 'Back to top' link component used on GOV.UK (e.g. https://www.gov.uk/government/collections/monthly-statistics-for-adult-social-care-england) */
.govuk-frontend-supported .gem-c-contents-list-with-body__sticky-element {
  position: absolute;
  bottom: 0;
}
.govuk-frontend-supported .gem-c-contents-list-with-body__sticky-element--stuck-to-window {
  bottom: 0;
  position: fixed;
}
.govuk-frontend-supported .gem-c-contents-list-with-body__sticky-element--enabled {
  transition: opacity, .3s, ease;
  opacity: 1;
}
@media(max-width: 40.0525em) {
  .govuk-frontend-supported .gem-c-contents-list-with-body__sticky-element--enabled {
    position: static;
  }
}
.govuk-frontend-supported .gem-c-contents-list-with-body__sticky-element--hidden {
  opacity: 0;
  pointer-events: none;
}

.gem-c-contents-list-with-body__link-container {
  margin: 0 auto;
  padding: 0;
}
@media(min-width: 40.0625em) {
  .gem-c-contents-list-with-body__link-container {
    max-width: 1024px;
  }
}

.gem-c-contents-list-with-body__link-container .gem-c-back-to-top-link {
  margin-left: 0;
  margin-right: 0;
}

.gem-c-contents-list-with-body__list-container {
  margin-bottom: 15px;
}
@media(min-width: 40.0625em) {
  .gem-c-contents-list-with-body__list-container {
    margin-bottom: 50px;
  }
}

.gem-c-contents-list-with-body__link-wrapper {
  padding-bottom: 10px;
}

.gem-c-contents-list-with-body__link-wrapper .gem-c-back-to-top-link {
  padding-bottom: 10px;
}

.gem-c-contents-list-with-body__link-wrapper.gem-c-contents-list-with-body__sticky-element--stuck-to-window {
  background-color: #f3f2f1;
  bottom: -1px;
  left: 0;
  margin: 0;
  padding: 0;
  padding-left: 0;
  position: fixed;
  width: 100%;
  z-index: 10;
}
@media(min-width: 40.0625em) {
  .gem-c-contents-list-with-body__link-wrapper.gem-c-contents-list-with-body__sticky-element--stuck-to-window {
    padding-left: 10px;
  }
}

.gem-c-contents-list-with-body__link-wrapper.gem-c-contents-list-with-body__sticky-element--stuck-to-window .gem-c-back-to-top-link {
  margin-bottom: 0;
  padding: 15px;
  width: 66%;
}
@media(min-width: 40.0625em) {
  .gem-c-contents-list-with-body__link-wrapper.gem-c-contents-list-with-body__sticky-element--stuck-to-window .gem-c-back-to-top-link {
    padding: 20px;
  }
}

.gem-c-back-to-top-link {
  display: inline-block;
  margin-bottom: 10px;
  margin-left: 15px;
  margin-right: 15px;
}

.gem-c-back-to-top-link__icon {
  float: left;
  margin-right: .3em;
  width: .8em;
  height: .968em;
}

